# stm32n6-camera

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md
Application/NUCLEO-N657X0-Q/Inc/: app_camerapipeline.h  app_config.h  cmw_camera_conf.h  imx219_isp_param_conf.h  isp_conf.h  isp_param_conf.h  util.h
Application/NUCLEO-N657X0-Q/STM32CubeIDE/: .cproject  .project  NUCLEO-N657X0-Q_GettingStarted_ImageClassification.launch
Application/NUCLEO-N657X0-Q/Src/: app_camerapipeline.c  main.c
Middlewares/stm32-mw-camera/: cmw_camera.c  cmw_camera.h  cmw_io.h
Middlewares/stm32-mw-camera/ISP_Library/isp/Src/: isp_ae_algo.c
Middlewares/stm32-mw-camera/ISP_Library/isp_param_conf/: imx219_JudgeII_isp_param_conf.h  imx219_MiniLBox_isp_param_conf.h
Middlewares/stm32-mw-camera/sensors/: cmw_imx219.c  cmw_imx219.h
Middlewares/stm32-mw-camera/sensors/imx219/: imx219.c  imx219.h  imx219_reg.c  imx219_reg.h
Model/NUCLEO-N657X0-Q/: network_data.hex
